# colony

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  rustfmt.toml
.github/workflows/: rust.yml
src/: biome.rs  button_system.rs  click.rs  combat_system.rs  components.rs  constants.rs  game_ui.rs  info_panel.rs  initializations.rs  input.rs  interface.rs  load.rs  main.rs  main_menu.rs  main_menu_plugin.rs  map.rs  melee_attacker_system.rs  mods.rs  monstergenerator_system.rs  moverandom_system.rs  movetoward_system.rs  namegiving_system.rs  names_system.rs  needs.rs  nest.rs  objects.rs  pause.rs  prelude.rs  resources.rs  seasons.rs  selection_systems.rs  spoilage_system.rs  startup.rs  statusdisplay_system.rs  task_system.rs  text_system.rs  thinking_system.rs  unitgenerator_system.rs  window_system.rs
src/combat_system/: death.rs  melee.rs  ranged.rs
src/initializations/: biome.rs  load.rs  map.rs  startup.rs  window_system.rs
src/interface/: click.rs  game_ui.rs  info_panel.rs  input.rs  main_menu.rs  main_menu_plugin.rs  pause.rs
src/plugin/: biome.rs  button.rs  click.rs  game_ui.rs  main_menu.rs  main_menu_plugin.rs  mod.rs  needs.rs  selection.rs  startup.rs
src/plugins/: main_menu_legacy.rs  mod.rs  monstergenerator.rs  movetoward.rs  needs.rs  seasons.rs  spoilage.rs  task.rs  thinking.rs
src/system/: mod.rs  moverandom.rs  music.rs  names.rs  pause.rs  window.rs
src/systems/: input.rs  map.rs  namegiving.rs  text.rs
src/task_system/: chop.rs  eat.rs  forage.rs  meander.rs  personality.rs  plant.rs  play.rs  sleep.rs  work.rs
(+12 files in other folders)
