[package]
name = "colony"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*", features = [ "wav" ] }
rand = "*"
winit = "0.28.6"
image = "*"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
